--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "vite",
     "build": "tsc && vite build",
     "lint": "eslint src --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "start": "serve dist -s -n -L -p $PORT"
   },
   "dependencies": {
     "react": "^18.2.0",
@@ -15,7 +16,8 @@
     "react-toastify": "^9.1.3",
     "sass": "^1.63.6",
     "scss": "^0.2.4",
-    "socket.io-client": "^4.7.1"
+    "socket.io-client": "^4.7.1",
+    "serve": "^14.2.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.14",
